name:                ansigraph
version:             0.1.0.0
synopsis:            Terminal-based graphing via ANSI and Unicode

description:         Ansigraph is an ultralightweight terminal-based graphing utility. It uses
                     unicode characters and ANSI escape codes to display and animate colored graphs
                     of vectors/functions in real and complex variables.
                     .

                     This functionality is provided by a 'Graphable' type class, whose method
                     'graphWith' draws a graph at the terminal. Another function 'animateWith' takes
                     a list of Graphable elements and displays an animation by rendering them in
                     sequence. Both of these functions take an options record as an argument. The
                     'graph' and 'animate' functions are defined to use the default options, and the
                     user can define similar functions based on their own settings.
                     .

                     There are two main ways to use the package.

                     Importing "System.Console.Ansigraph" provides all the functionality we
                     typically use. This includes the /FlexibleInstances/ extension, which makes it
                     marginally more convenient to use graphing functions by allowing instances like
                     'Graphable [Double]'.
                     .

                     If you want to use the package without activating /FlexibleInstances/ then you
                     can import "System.Console.Ansigraph.Core", which provides everything except
                     these instances. To graph you must use one of a handful of newtype wrappers,
                     namely: 'Graph', 'PosGraph', 'CGraph', 'Mat', 'CMat'. These wrappers are also
                     available from the standard 'Ansigraph' module.
                     .

                     The "System.Console.Ansigraph.Examples" module contains examples of all the
                     graph types with animations of various plane waves, and also shows the
                     available ANSI colors.


homepage:            https://github.com/BlackBrane/ansigraph
license:             MIT
license-file:        LICENSE
author:              Cliff Harvey
maintainer:          cs.hbar+hs@gmail.com
copyright:           2015
category:            Graphics
build-type:          Simple

cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/BlackBrane/ansigraph.git

library
  exposed-modules:     System.Console.Ansigraph,
                       System.Console.Ansigraph.Core,
                       System.Console.Ansigraph.Examples

  other-modules:       System.Console.Ansigraph.Internal.Core,
                       System.Console.Ansigraph.Internal.FlexInstances,
                       System.Console.Ansigraph.Internal.Horizontal,
                       System.Console.Ansigraph.Internal.Matrix

  build-depends:       base >=4.8 && <4.9, ansi-terminal >=0.6 && <0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
