name:                ansigraph
version:             0.3.0.1
synopsis:            Terminal-based graphing via ANSI and Unicode

description:         Ansigraph is an ultralightweight terminal-based graphing utility. It uses
                     Unicode characters and ANSI escape codes to display and animate colored graphs
                     of vectors/functions in real and complex variables.
                     .

                     This functionality is provided by a 'Graphable' type class, whose method
                     'graphWith' draws a graph at the terminal. Another function 'animateWith' takes
                     a list of Graphable elements and displays an animation by rendering them in
                     sequence. Both of these functions take an options record as an argument. The
                     'graph' and 'animate' functions are defined to use the default options, and the
                     user can define similar functions based on their own settings.
                     .

                     There are two main ways to use the package.

                     Importing "System.Console.Ansigraph" provides all the functionality we
                     typically use. This includes the /FlexibleInstances/ extension, which makes it
                     marginally more convenient to use graphing functions by allowing instances like
                     'Graphable [Double]'.
                     .

                     If you want to use the package without activating /FlexibleInstances/ then you
                     can import "System.Console.Ansigraph.Core", which provides everything except
                     these instances. Then you must use one of a few newtype wrappers, namely:
                     'Graph', 'PosGraph', 'CGraph', 'Mat', 'CMat'. These wrappers are also
                     available from the standard 'Ansigraph' module.
                     .

                     The "System.Console.Ansigraph.Examples" module contains examples of all the
                     graph types, and also shows the available ANSI colors.


homepage:            https://github.com/BlackBrane/ansigraph
license:             MIT
license-file:        LICENSE
author:              Cliff Harvey
maintainer:          cs.hbar+hs@gmail.com
copyright:           2015-2016 Cliff Harvey
category:            Graphics
build-type:          Simple
extra-source-files:  README.md,
                     CHANGELOG.md,
                     img/wavedemo.gif

cabal-version:       >=1.10


library
  exposed-modules:     System.Console.Ansigraph,
                       System.Console.Ansigraph.Core,
                       System.Console.Ansigraph.Examples

  other-modules:       System.Console.Ansigraph.Internal.Core,
                       System.Console.Ansigraph.Internal.FlexInstances,
                       System.Console.Ansigraph.Internal.Horizontal,
                       System.Console.Ansigraph.Internal.Matrix

  build-depends:       base >=4.6 && <4.10,
                       ansi-terminal >=0.6 && <0.7

  if (impl(ghc < 8.0))
    build-depends:     transformers >= 0.3 && <0.6

  hs-source-dirs:      src

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -fno-warn-unused-do-bind
                       -fno-warn-missing-signatures
                       -fno-warn-unused-imports


test-suite test-ansigraph
  type:             exitcode-stdio-1.0

  hs-source-dirs:   test

  main-is:          test-ansigraph.hs

  default-language: Haskell2010

  build-depends:    base == 4.*,
                    ansigraph,
                    hspec == 2.*,
                    QuickCheck == 2.*


source-repository head
  type:     git

  location: git://github.com/BlackBrane/ansigraph.git
